--- a/Reconhecimento de Padrões aps2.ipynb
+++ b/Reconhecimento de Padrões aps2.ipynb
@@ -146,7 +146,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -155,9 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-=======
-   "execution_count": 19,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [
     {
@@ -229,11 +225,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": 7,
-=======
-   "execution_count": 34,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [
     {
@@ -241,13 +233,13 @@
      "output_type": "stream",
      "text": [
       "(5, 4, 2000)\n",
-      "(5, 4, 94, 129)\n"
+      "(5, 4, 96, 100)\n"
      ]
     }
    ],
    "source": [
     "salto = 20\n",
-    "segmento = 129\n",
+    "segmento = 100\n",
     "print(data_filtered.shape)\n",
     "n_win = int((data_filtered.shape[-1] - segmento) / salto) + 1\n",
     "ids = np.arange(n_win) * salto\n",
@@ -267,53 +259,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### IEMG"
-   ]
-  },
-  {
-   "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 8,
-=======
-   "execution_count": 35,
->>>>>>> Stashed changes
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5, 4, 94)\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "iemg =   np.sum(x, axis=-1) / 100#(x.shape[:-1])\n",
-    "print(iemg.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### VAR"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 9,
-=======
-   "execution_count": 36,
->>>>>>> Stashed changes
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 4, 94)\n"
+      "(5, 4, 96)\n"
      ]
     }
    ],
@@ -331,14 +289,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 4, 94)\n"
+      "(5, 4, 96)\n"
      ]
     }
    ],
@@ -346,6 +304,27 @@
     "rms = np.sqrt(np.sum(np.abs(x) ** 2, axis=-1) / (np.prod(x.shape[:-1]) - 1))\n",
     "print(rms.shape)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### MAV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
